fix(.fr-header__menu .fr-container) : Avoid overflow when character spacing is modified

--- a/app/assets/stylesheets/new_header.scss
+++ b/app/assets/stylesheets/new_header.scss
@@ -7,6 +7,12 @@
     width: auto;
   }
 
+  // Avoid overflow when character spacing is modified
+  .fr-container {
+    max-width: 100vw;
+    margin: 0;
+  }
+
   // Align links & buttons
   .fr-translate {
     margin-left: 0;
